// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplainDialog matches snapshot on error 1`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="explain-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Query plan"
>
  <div
    className="bp3-dialog-body"
  >
    <div>
      test error
    </div>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        onClick={[Function]}
        text="Close"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;

exports[`ExplainDialog matches snapshot on init 1`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="explain-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Query plan"
>
  <div
    className="bp3-dialog-body"
  >
    <div />
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        onClick={[Function]}
        text="Close"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;

exports[`ExplainDialog matches snapshot on loading 1`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="explain-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Query plan"
>
  <div
    className="bp3-dialog-body"
  >
    <Memo(Loader) />
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        onClick={[Function]}
        text="Close"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;

exports[`ExplainDialog matches snapshot on some data 1`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="explain-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Query plan"
>
  <div
    className="bp3-dialog-body"
  >
    <div
      className="one-query"
    >
      <Blueprint3.FormGroup
        label="Query"
      >
        <Blueprint3.TextArea
          readOnly={true}
          value="{
  \\"queryType\\": \\"topN\\",
  \\"dataSource\\": {
    \\"type\\": \\"table\\",
    \\"name\\": \\"kttm-multi-day\\"
  },
  \\"virtualColumns\\": [],
  \\"dimension\\": {
    \\"type\\": \\"default\\",
    \\"dimension\\": \\"browser\\",
    \\"outputName\\": \\"d0\\",
    \\"outputType\\": \\"STRING\\"
  },
  \\"metric\\": {
    \\"type\\": \\"numeric\\",
    \\"metric\\": \\"a0\\"
  },
  \\"threshold\\": 101,
  \\"intervals\\": {
    \\"type\\": \\"intervals\\",
    \\"intervals\\": [
      \\"-146136543-09-08T08:23:32.096Z/146140482-04-24T15:36:27.903Z\\"
    ]
  },
  \\"filter\\": null,
  \\"granularity\\": {
    \\"type\\": \\"all\\"
  },
  \\"aggregations\\": [
    {
      \\"type\\": \\"count\\",
      \\"name\\": \\"a0\\"
    }
  ],
  \\"postAggregations\\": [],
  \\"context\\": {
    \\"sqlOuterLimit\\": 101,
    \\"sqlQueryId\\": \\"5905fe8d-9a91-41e0-8f3a-d7a8ac21dce6\\"
  },
  \\"descending\\": false
}"
        />
      </Blueprint3.FormGroup>
      <Blueprint3.FormGroup
        label="Signature"
      >
        <Blueprint3.InputGroup
          defaultValue="[{d0:STRING, a0:LONG}]"
          readOnly={true}
        />
      </Blueprint3.FormGroup>
    </div>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        onClick={[Function]}
        text="Close"
      />
      <Blueprint3.Button
        intent="primary"
        onClick={[Function]}
        text="Open query"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;
